[package]
name = "raylib-rs-ecs-template"
version = "0.1.0"
authors = ["louisgjohnson <louisgjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { git = "https://github.com/deltaphc/raylib-rs", branch = "master" }
specs = { version = "0.16.1", features = ["specs-derive"] }
serde = "1.0.104"
ron = "0.5.1"